--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <option value="Kedarnath">Kedarnath</option>
                     <option value="Badrinath">Badrinath</option>
                     <option value="Puri">Puri</option>
-                    <option value="Tirupathi">Tiupathi</option>
+                    <option value="Tirupathi">Tirupathi</option>
                  </select>
                 
              <br>
